# jspace-viz

./: .gitignore  Dockerfile  README.md  pyproject.toml
docs/: index.html
docs/data/: code-off-by-one-bug_jlens.json  code-off-by-one-bug_logit.json  code-what-does-this-print_jlens.json  code-what-does-this-print_logit.json  index.json  multi-hop-country-shaped-like-a-boot_jlens.json  multi-hop-country-shaped-like-a-boot_logit.json  two-hop-animal-that-spins-webs_jlens.json  two-hop-animal-that-spins-webs_logit.json
docs/deepseek/: index.html
docs/deepseek/data/: code-off-by-one-bug_jlens.json  index.json  multi-hop-country-shaped-like-a-boot_jlens.json  multi-hop-country-shaped-like-a-boot_logit.json  two-hop-animal-that-spins-webs_jlens.json  two-hop-animal-that-spins-webs_logit.json
docs/deepseek/static/: app.css  app.js
docs/gpt2/data/: code-off-by-one-bug_jlens.json  code-off-by-one-bug_logit.json  code-what-does-this-print_jlens.json  code-what-does-this-print_logit.json  index.json  multi-hop-country-shaped-like-a-boot_jlens.json  multi-hop-country-shaped-like-a-boot_logit.json  two-hop-animal-that-spins-webs_jlens.json  two-hop-animal-that-spins-webs_logit.json
docs/gpt2/static/: app.css  app.js
docs/static/: app.css  app.js
jspace_viz/: __init__.py  analysis.py  fitting.py  hooks.py  lens.py  model.py  presets.py  server.py
jspace_viz/data/chip_baselines/: gpt2.json  (+1 more)
jspace_viz/static/: app.css  app.js  index.html
scripts/: export_static.py  fit_lens.py  make_chip_baseline.py  make_demo_gif.py  upload_lens.py  validate_lens.py
